# fsearch

./: .gitignore  .test-conf  Makefile  README.md  benchmark.py  client.py  config.ini  conftest.py  notebook.ipynb  perf.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
fsearch/: Untitled-1.md  __init__.py  __main__.py  algorithms.py  cli.py  client.py  config.py  reports.py  server.py  service.py  templates.py  utils.py
notebooks/: test_notebook.ipynb
reports/: Day-1.md  Day-2.md  Day-3.md  Day-4.md  Day-5.md
tests/: test_algorithms.py  test_client.py  test_config.py  test_main.py  test_performance.py  test_server.py  test_service.py  test_utils.py
